--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ winit = "0.28.6"
 image = { version = "0.24.7", default-features = false, features = ["png"] }
 strum = { version = "0.25.0", features = ["derive"] }
 color-eyre = "0.6.2"
+noise = "0.8.2"
+lazy_static = "1.4.0"
